Adds project description, repository url and version.

--- a/IPC-2581/IPC-2581.csproj
+++ b/IPC-2581/IPC-2581.csproj
@@ -1,13 +1,16 @@
 <Project Sdk="Microsoft.NET.Sdk">
 
-  <PropertyGroup>
-    <TargetFramework>netstandard2.1</TargetFramework>
-    <RootNamespace>IPC2581</RootNamespace>
-    <Nullable>enable</Nullable>
-  </PropertyGroup>
+	<PropertyGroup>
+		<TargetFramework>netstandard2.1</TargetFramework>
+		<RootNamespace>IPC2581</RootNamespace>
+		<Nullable>enable</Nullable>
+		<RepositoryUrl>https://github.com/midub/IPC-2581-CSharp</RepositoryUrl>
+		<Description>C# classes of IPC-2581 revision C format.</Description>
+		<Version>1.0.0</Version>
+	</PropertyGroup>
 
-  <ItemGroup>
-    <PackageReference Include="System.ComponentModel.Annotations" Version="5.0.0" />
-  </ItemGroup>
+	<ItemGroup>
+		<PackageReference Include="System.ComponentModel.Annotations" Version="5.0.0" />
+	</ItemGroup>
 
 </Project>
